--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "passport-stub": "^1.1.1",
     "supertest": "^3.1.0",
     "webpack": "^3.10.0"
+  },
+  "engines": {
+    "node": "8.9.4"
   }
 }
